# commonapi_someip_demo

./: CMakeLists.txt
src/: HelloWorldClient.cpp  HelloWorldService.cpp
src-gen/: CMakeLists.txt
z_misc/: run_server.sh
z_misc/v1/: vsomeip_client.json  vsomeip_service.json
z_misc/v1/vsomeip/: vsomeip.json
z_misc/v2/vsomeip/: vsomeip_client.json  vsomeip_server.json
